--- a/task-a/index.html
+++ b/task-a/index.html
@@ -1,3 +1,7 @@
+<!--
+Author: Pozo Marius (DON'T CHANGE THIS)
+WORK IN PROGRESS
+-->
 <!doctype html>
 <html lang="fr">
 <head>
@@ -8,7 +12,7 @@
 </head>
 <body>
 <header class="site-header">
-<h1>Bienvenue sur ma page simple</h1>
+<h1>Hello Web</h1>
 <p class="tagline">Une page HTML très simple avec CSS séparé</p>
 </header>
 
