--- a/task-b/index.html
+++ b/task-b/index.html
@@ -12,7 +12,7 @@ WORK IN PROGRESS
 </head>
 <body>
 <header class="site-header">
-<h1>Welcome on Marius's page</h1>
+<h1>Marius Pozo</h1>
 <p class="tagline">This is a simple page made thanks to AIs (ChatGPT+Copilot).
     I am Marius Pozo, its owner, and I would like to share some words with you.</p>
 <p class="tagline">I am a 3rd year student in computer engineering, at ESIEA, France, but I'm actually at Centria as part of an exchange.</p>
@@ -72,7 +72,7 @@ WORK IN PROGRESS
 </section>
 
 
-<section id="mainbox">
+<section id="exobloc">
 <h2>Exercise Block</h2>
 <p>here is the text block I will be using to complete some prerequisites of tasks,
     because I don't feel some of them will render nice on my page.</p>
