--- a/task-b/index.html
+++ b/task-b/index.html
@@ -51,8 +51,8 @@ WORK IN PROGRESS
 
 <section id="contact">
 <h2>Channels</h2>
-    <li><a href="https://www.youtube.com/@SmashmanD7" style="color: #ff0000; font-weight: bold;">Youtube channel</a></li>
-    <li><a href="https://www.twitch.tv/smashmand7" style="color: #6441a5; font-weight: bold;">Twitch channel</a></li>
+    <li><a href="https://www.youtube.com/@SmashmanD7" style="color: #ff0000;">Youtube channel</a></li>
+    <li><a href="https://www.twitch.tv/smashmand7" style="color: #6441a5;">Twitch channel</a></li>
 </section>
 
 <section id="features">
