--- a/task-d/index.html
+++ b/task-d/index.html
@@ -54,7 +54,7 @@ WORK IN PROGRESS
                 future.</p>
         </section>
 
-        <section id="contact">
+        <section class="contact">
             <h2>Channels</h2>
             <ul>
                 <li><a target="_blank" href="https://www.youtube.com/@SmashmanD7" style="color: #ff0000;">Youtube channel</a></li>
@@ -71,7 +71,7 @@ WORK IN PROGRESS
             </ul>
         </section>
 
-        <section id="contact">
+        <section class="contact">
             <h2>Contact</h2>
             <p>Send an email to: <a href="mailto:marius.pozo@gmail.com">marius.pozo@gmail.com</a>,</p>
             <p>it is my personnal email.</p>
