--- a/task-e/indexImported.html
+++ b/task-e/indexImported.html
@@ -18,7 +18,7 @@
   <main class="content">
     <!-- Student info block: edit the values as needed -->
     <section class="student-info" aria-label="Student information">
-      <p><strong>Student:</strong> <span class="student-name">Marius Pozoe</span></p>
+      <p><strong>Student:</strong> <span class="student-name">Marius Pozo</span></p>
       <p><strong>Group:</strong> <span class="student-group">NITS24K</span></p>
     </section>
     <div class="table-wrap">
