Task F author correction

--- a/task-f/index.html
+++ b/task-f/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,8 +10,8 @@
 
 <body>
   <!--
-    Author: Ville Heikkiniemi
-    Date: 2025-10-06
+    Author: Marius Pozo (after Ville Heikkiniemi)
+    Date: 2025-10-09
   -->
 
   <header class="site-header">
