--- a/task-h/index.html
+++ b/task-h/index.html
@@ -39,33 +39,33 @@
                 <h2 class="text-[1.1rem] mb-2 font-bold">Add Information</h2>
 
                 <form id="addInfoForm" novalidate>
-                    <div class="grid grid-cols-[150px_1fr] items-center gap-2 my-2">
+                    <div class="grid grid-cols-[100px_1fr] items-center gap-2 my-2">
                         <label for="fullName" class="text-[1rem] text-right pr-2">Full name</label>
                         <input id="fullName" name="fullName" type="text" required
                             class="px-2 py-1.5 border border-[#d0d7e2] rounded-md w-full" />
                     </div>
-                    <span id="name-error" class="text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
+                    <span id="name-error" class="error-message text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
 
-                    <div class="grid grid-cols-[150px_1fr] items-center gap-2 my-2">
+                    <div class="grid grid-cols-[100px_1fr] items-center gap-2 my-2">
                         <label for="email" class="text-[1rem] text-right pr-2">Email</label>
                         <input id="email" name="email" type="email" required placeholder="example@email.com"
                             class="px-2 py-1.5 border border-[#d0d7e2] rounded-md w-full" />
                     </div>
-                    <span id="email-error" class="text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
+                    <span id="email-error" class="error-message text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
 
-                    <div class="grid grid-cols-[150px_1fr] items-center gap-2 my-2">
+                    <div class="grid grid-cols-[100px_1fr] items-center gap-2 my-2">
                         <label for="tel" class="text-[1rem] text-right pr-2">Phone</label>
                         <input id="tel" name="tel" type="tel" placeholder="06 12 34 56 78"
                             class="px-2 py-1.5 border border-[#d0d7e2] rounded-md w-full" />
                     </div>
-                    <span id="phone-error" class="text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
+                    <span id="phone-error" class="error-message text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
 
-                    <div class="grid grid-cols-[150px_1fr] items-center gap-2 my-2">
+                    <div class="grid grid-cols-[100px_1fr] items-center gap-2 my-2">
                         <label for="dob" class="text-[1rem] text-right pr-2">Date of birth</label>
                         <input id="dob" name="DoB" type="date" required
                             class="px-2 py-1.5 border border-[#d0d7e2] rounded-md w-full" />
                     </div>
-                    <span id="dob-error" class="text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
+                    <span id="dob-error" class="error-message text-[#fd4444] text-[0.9rem] my-1 mx-2"></span>
 
                     <hr class="border-0 border-b border-black/10 my-3">
 
@@ -73,6 +73,7 @@
                         <input id="terms" name="terms" type="checkbox" required />
                         <label for="terms" class="m-0 mb-2">I accept terms and conditions</label>
                     </div>
+                    <span id="terms-error" class="error-message text-[#fd4444] text-[0.9rem] my-1 mx-2 block"></span>
 
                     <div class="flex items-center gap-2 my-[-0.1rem]">
                         <button id="addRowBtn" type="submit"
@@ -92,14 +93,22 @@
         <div
             class="bg-white border border-[#d0d7e2] rounded-[8px] p-4 shadow-[0_2px_10px_rgba(0,0,0,0.06)] overflow-x-auto">
             <table class="w-full table-fixed border-collapse text-[1rem]" id="timetable">
+                <colgroup>
+                    <col class="w-[20%] text-left" />
+                    <col class="w-[20%] text-center" />
+                    <col class="w-[20%] text-center" />
+                    <col class="w-[15%] text-center" />
+                    <col class="w-[15%] text-center" />
+                    <col class="w-[10%] text-center" />
+                </colgroup>
                 <thead>
                     <tr>
-                        <th class="w-[20%] bg-[#273e73] text-white text-left px-3 py-2 border-b border-[#d0d7e2]">Timestamp</th>
-                        <th class="w-[20%] bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Full name</th>
-                        <th class="w-[20%] bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Email</th>
-                        <th class="w-[15%] bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Phone</th>
-                        <th class="w-[15%] bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Date of Birth</th>
-                        <th class="w-[10%] bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Terms</th>
+                        <th class="bg-[#273e73] text-white text-left px-3 py-2 border-b border-[#d0d7e2]">Timestamp</th>
+                        <th class="bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Full name</th>
+                        <th class="bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Email</th>
+                        <th class="bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Phone</th>
+                        <th class="bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Date of Birth</th>
+                        <th class="bg-[#273e73] text-white text-center px-3 py-2 border-b border-[#d0d7e2]">Terms</th>
                     </tr>
                 </thead>
                 <tbody class="[&>tr:nth-child(even)]:bg-[#eef3ff]"></tbody>
