--- a/task-i/index.html
+++ b/task-i/index.html
@@ -56,18 +56,18 @@
 
   <div class="flex flex-grow flex-col md:flex-row max-w-screen-lg mx-auto">
     <main class="flex-grow p-6 bg-secondary text-center">
+      <h3 class="text-4xl font-bold p-2 text-center my-8">Drive Your Way, Anytime, Anywhere</h3>
       <section class="flex-grow grid md:grid-cols-[2fr_1fr] gap-x-20 mb-20">
         <div>
-          <h3 class="text-4xl font-bold p-2 bg-secondary text-center mb-8">Drive Your Way, Anytime, Anywhere</h3>
-          <p class="p-1 bg-secondary text-justify mb-5">At Cross Cars, we make getting behind the wheel
+          <p class="p-1 text-justify mb-5">At Cross Cars, we make getting behind the wheel
             effortless.
             With a fleet of well-maintained vehicles ready at your fingertips, we combine high availability with
             convenient
             locations, so you can pick up your car exactly when and where you need it.</p>
-          <p class="p-1 bg-secondary text-justify mb-5">Whether it’s a last-minute business trip,
+          <p class="p-1 text-justify mb-5">Whether it’s a last-minute business trip,
             a weekend getaway, or a city errand, we ensure fast, flexible, and hassle-free rental experiences.
             Our cars are always nearby, so you spend less time searching and more time driving.</p>
-          <p class="p-1 bg-secondary text-justify mb-5">Do not worry about keys! Our technologies enable you to easily
+          <p class="p-1 text-justify mb-5">Do not worry about keys! Our technologies enable you to easily
             access
             and use car with our application and NFC technology.</p>
         </div>
@@ -80,7 +80,7 @@
       </section>
 
       <section class="flex-grow mx-10 mb-20">
-        <h3 class="text-4xl font-bold p-2 bg-secondary text-center mb-8">Why Choose Us?</h3>
+        <h3 class="text-4xl font-bold p-2 text-center my-8">Why Choose Us?</h3>
         <div class="grid grid-cols-2 gap-y-8 md:mx-10">
 
           <!-- Item 1 -->
@@ -96,10 +96,10 @@
               <path
                 d="M11.2803 6.71967C11.5732 7.01256 11.5732 7.48744 11.2803 7.78033L8.28026 10.7803C8.13954 10.921 7.94867 11.0001 7.74966 11C7.55066 10.9999 7.35984 10.9208 7.21922 10.78L5.71953 9.27812C5.42685 8.98502 5.42719 8.51014 5.72029 8.21746C6.0134 7.92477 6.48827 7.92511 6.78095 8.21822L7.75031 9.18896L10.2196 6.71967C10.5125 6.42678 10.9874 6.42678 11.2803 6.71967Z" />
             </svg>
-            <p class="text-xl font-semibold p-1 bg-secondary text-center mt-2">
+            <p class="text-xl font-semibold p-1 text-center mt-2">
               High Availability
             </p>
-            <p class="p-1 bg-secondary text-center">A wide range of vehicles available whenever you need them.</p>
+            <p class="p-1 text-center">A wide range of vehicles available whenever you need them.</p>
           </div>
 
           <!-- Item 2 -->
@@ -111,10 +111,10 @@
               <line x1="1" y1="24" x2="47" y2="24" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
               <circle cx="24" cy="24" r="18" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
-            <p class="text-xl font-semibold p-1 bg-secondary text-center mt-2">
+            <p class="text-xl font-semibold p-1 text-center mt-2">
               Convenient Locations
             </p>
-            <p class="p-1 bg-secondary text-center">Pick up and drop off your car at spots close to you.
+            <p class="p-1 text-center">Pick up and drop off your car at spots close to you.
             </p>
           </div>
 
@@ -125,10 +125,10 @@
               <path
                 d="M36.2,26.4a1.8,1.8,0,0,0,1.4.6,2,2,0,0,0,1.4-.6L45.4,20a1.9,1.9,0,0,0,0-2.8l-3-3.1A3.7,3.7,0,0,0,43,12a4,4,0,0,0-4-4,3.7,3.7,0,0,0-2.1.6l-3.1-3a1.9,1.9,0,0,0-2.8,0L24.6,12a1.9,1.9,0,0,0,0,2.8L29,19.2l-5,5-5.4-5.4A8.7,8.7,0,0,0,20,14a9,9,0,0,0-9-9,2,2,0,0,0,0,4,5,5,0,1,1-5,5,2,2,0,0,0-4,0,9,9,0,0,0,9,9,8.7,8.7,0,0,0,4.8-1.4L21.2,27,8.6,39.6a1.9,1.9,0,0,0,0,2.8,1.9,1.9,0,0,0,2.8,0L24,29.8,36.6,42.4a1.9,1.9,0,0,0,2.8,0,1.9,1.9,0,0,0,0-2.8L26.8,27l5-5Z" />
             </svg>
-            <p class="text-xl font-semibold p-1 bg-secondary text-center mt-2">
+            <p class="text-xl font-semibold p-1 text-center mt-2">
               Reliable Fleet
             </p>
-            <p class="p-1 bg-secondary text-center">Regularly maintained cars for safety and comfort.</p>
+            <p class="p-1 text-center">Regularly maintained cars for safety and comfort.</p>
           </div>
 
           <!-- Item 4 -->
