--- a/task-i/index.html
+++ b/task-i/index.html
@@ -24,7 +24,7 @@
   <title>Cross Cars - Landing page</title>
 </head>
 
-<body class="flex flex-col min-h-screen text-gray-800 text-lg">
+<body class="flex flex-col min-h-screen text-text text-lg">
   <header class="bg-primary text-white">
     <div class="max-w-screen-lg mx-auto flex items-center justify-between p-2">
       <div class="flex items-center gap-2">
