--- a/task-i/index.html
+++ b/task-i/index.html
@@ -32,8 +32,8 @@
       </div>
       <nav class="flex items-center gap-8">
         <a href="../task-i/" class="hover:text-blue-400">Home</a>
-        <a href="../task-j/" class="hover:text-blue-400">Rent</a>
-        <a href="#" class="hover:text-blue-400">Contact</a>
+        <a href="../task-j/" class="hover:text-blue-400">Catalog</a>
+        <a href="../task-k/" class="hover:text-blue-400">Rent</a>
         <button class="bg-slate-100 text-blue-600 px-4 py-2 rounded hover:bg-blue-100">Download</button>
       </nav>
   </header>
