--- a/task-j/index.html
+++ b/task-j/index.html
@@ -39,8 +39,8 @@
       </div>
       <nav class="flex items-center gap-8">
         <a href="../task-i/" class="hover:text-blue-400">Home</a>
-        <a href="../task-j/" class="hover:text-blue-400">Rent</a>
-        <a href="#" class="hover:text-blue-400">Contact</a>
+        <a href="../task-j/" class="hover:text-blue-400">Catalog</a>
+        <a href="../task-k/" class="hover:text-blue-400">Rent</a>
         <button class="bg-slate-100 text-blue-600 px-4 py-2 rounded hover:bg-blue-100">Download</button>
       </nav>
   </header>
@@ -212,7 +212,7 @@
             <div
               class="bg-background rounded-2xl shadow-lg p-6 flex flex-col items-center text-center hover:shadow-xl transition-shadow h-full">
               <div class="flex justify-center items-center h-40 mb-5">
-                <img src="https://www.usinenouvelle.com/mediatheque/4/8/3/000656384_896x598_c.jpg" alt="SUV 2"
+                <img src="https://starterre-res.cloudinary.com/image/upload/f_auto,q_auto,w_800/v1655128178/starterre_fr/guides-achat/suv/peugeot-2008-1-face-avant.jpg" alt="SUV 2"
                   class="h-full w-auto object-contain">
                 <!-- Source PxHere SUV :contentReference[oaicite:3]{index=3} -->
               </div>
