--- a/task-l/index.html
+++ b/task-l/index.html
@@ -31,9 +31,9 @@
         <img src="../global_resources/CrossCarsLogo.png" alt="Cross Cars Logo" class="h-20 w-auto">
       </div>
       <nav class="flex items-center gap-8">
-        <a href="../task-i/" class="hover:text-blue-400">Home</a>
-        <a href="../task-j/" class="hover:text-blue-400">Catalog</a>
-        <a href="../task-k/" class="hover:text-blue-400">Rent</a>
+        <a href="index.html" class="hover:text-blue-400">Home</a>
+        <a href="catalog.html" class="hover:text-blue-400">Catalog</a>
+        <a href="order.html" class="hover:text-blue-400">Rent</a>
         <button class="bg-slate-100 text-blue-600 px-4 py-2 rounded hover:bg-blue-100">Download</button>
       </nav>
   </header>
@@ -48,7 +48,7 @@
       <p class="text-lg mb-4">Highly available car rents all across your town, find your car within a 10-minute walk.
       </p>
       <h3 class="text-2xl font-semibold mb-4">Drive like it was yours!</h3>
-      <button onclick="window.location.href='../task-j/';"
+      <button onclick="window.location.href='catalog.html';"
         class="bg-slate-100 text-blue-600 px-4 py-2 rounded hover:bg-blue-100">
         Find your car
       </button>
@@ -171,7 +171,7 @@
           <h3 class="text-xl font-semibold mb-2 text-primary">Economy Cars</h3>
           <p class="text-accent mb-4">Perfect for city trips and vacations, combining comfort with low fuel consumption.
           </p>
-          <a href="../task-j/"
+          <a href="catalog.html"
             class="mt-auto bg-primary text-secondary px-4 py-2 rounded-lg hover:bg-accent transition-colors">Book
             Now</a>
         </div>
@@ -186,7 +186,7 @@
           </div>
           <h3 class="text-xl font-semibold mb-2 text-primary">SUVs & Family Cars</h3>
           <p class="text-accent mb-4">Spacious and comfortable for the whole family or trips with friends.</p>
-          <a href="../task-j/"
+          <a href="catalog.html"
             class="mt-auto bg-primary text-secondary px-4 py-2 rounded-lg hover:bg-accent transition-colors">Book
             Now</a>
         </div>
@@ -201,7 +201,7 @@
           <h3 class="text-xl font-semibold mb-2 text-primary">Luxury Cars</h3>
           <p class="text-accent mb-4">For elegant trips or special occasions, drive in style and comfort. This option is
             not as readily available as the others.</p>
-          <a href="../task-j/"
+          <a href="catalog.html"
             class="mt-auto bg-primary text-secondary px-4 py-2 rounded-lg hover:bg-accent transition-colors">Book
             Now</a>
         </div>
