task L minor correction

--- a/task-l/order.html
+++ b/task-l/order.html
@@ -159,7 +159,7 @@
                   if (errorEl) errorEl.textContent = '';
                 } else {
                   if (errorEl) {
-                    errorEl.textContent = `Item inconnu: ${requestedItem}`;
+                    errorEl.textContent = `Item unknow: ${requestedItem}`;
                   }
                 }
               });
